force-app/main/default/objects/Target_Period__c/Target_Period__c.object-meta.xml
<CustomObject>
    <label>Target Period</label>
    <nameField>
        <label>Period Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Target Periods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>