force-app/main/default/objects/Target_Period__c/fields/Is_Cumulative__c.field-meta.xml
<CustomField>
    <fullName>Is_Cumulative__c</fullName>
    <label>Cumulative Calculation</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
    <inlineHelpText>If checked, the incentive calculation for this period will aggregate achievements from all child periods (linked via Parent Period). Example: A Quarterly period with cumulative enabled will sum achievements from its 3 monthly child periods. Useful for FMCG quarterly PBIS where Q2 = Q1+Q2 cumulative.</inlineHelpText>
    <description>When true, incentive calculation sums achievements from all child periods. Used for cumulative quarterly/annual calculations.</description>
</CustomField>