force-app/main/default/objects/Target_Period__c/fields/Parent_Period__c.field-meta.xml
<CustomField>
    <fullName>Parent_Period__c</fullName>
    <label>Parent Period</label>
    <referenceTo>Target_Period__c</referenceTo>
    <relationshipLabel>Child Periods</relationshipLabel>
    <relationshipName>Child_Periods</relationshipName>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Links this period to a parent period for cumulative calculations. Example: Monthly periods (Apr, May, Jun) link to their parent Quarterly period (Q1). Quarterly periods link to their parent Annual period. Leave blank for standalone periods.</inlineHelpText>
    <description>Self-referencing hierarchy for period nesting. Monthly → Quarterly → Annual.</description>
</CustomField>